# Sentiment-Analysis

./: .gitignore  README.md  blog.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: api.yml  deploy.yml  mlflow.yml
api/: .env.sample  Dockerfile  main.py  requirements.txt  routes.py  settings.py  telemetry.py  utils.py
deployments/: Chart.yaml  values.yaml  values.yml
deployments/api-front/: values.yaml
deployments/api-front/templates/: api-deployment.yaml  front-deployment.yaml  ingress.yaml
deployments/mlflow-minio/: values.yaml
deployments/templates/: api-deployment.yaml  ingress.yaml  mlflow-deployment.yaml  mlflow-deployment.yml  secrets.yaml
front/: Dockerfile  main.py
mlflow/: Dockerfile  requirements.txt
notebooks/: p7_01_exploration_preprocessing_and_feature_extraction.ipynb  p7_02_modelisation.ipynb
